# AidSorter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
host/: README.md  aidsorter.conf  pyproject.toml
host-remote/: .pylintrc  pyproject.toml
host-remote/aidsorter/: __init__.py  __main__.py  detector.py  exceptions.py  info.py  mcu_config.py
host/aidsorter/: __init__.py  __main__.py  camera.py  detector.py  exceptions.py  fps_config.py  info.py  logger.py  mcu.py  mcu_config.py  visualizer.py
host/util/: autostart.sh  make_swap.sh  train.py
mcu/: mcu.ino
mcu/aidsorter/: aidsorter.ino
